--- a/sass/photos.scss
+++ b/sass/photos.scss
@@ -3,6 +3,7 @@
 
 .fb-albums {
     list-style-type: none;
+    padding: 0;
     li {
         display: none;
     }
